# modular-lang-proto

./: .gitignore  default.nix  dune-project  flake.nix  modular-lang-proto.opam  opam  readme.org
.github/workflows/: ci.yml
source/: algo.ml  algo_demo.ml  algo_generic.ml  algo_int.ml  calc.ml  calc_bool.ml  calc_float.ml  calc_int.ml  dune
source/ast/: calc.ml  calc_bool.ml  calc_demo.ml
source/calc-int/: calc.ml  calc_demo.ml  calc_float.ml  calc_int.ml  calc_int_app.ml  dune
source/tagless/: algo.ml  algo_layer.ml  calc.ml  calc_bool.ml  calc_bool_layer.ml  calc_demo.ml  calc_int.ml  calc_int_layer.ml  calc_layer.ml  compiler.ml  compiler_context.ml  demo.ml  dune  empty.ml  eval_base.ml  experimental.ml  interpreter.ml  interpreter_context.ml  parser.ml
source/tagless/algo/: algo.ml  algo_bindings.ml  algo_bool.ml  algo_calc.ml  algo_layer.ml
source/tagless/bindings/: bindings.ml  bindings_layer.ml
source/tagless/calc/: calc.ml  calc_bool.ml  calc_int.ml  calc_layer.ml
source/tagless/calc_bool/: calc_bool.ml  calc_bool_layer.ml
source/tagless/calc_int/: calc_int.ml  calc_int_layer.ml
source/tagless/context/: compiler.ml  interpreter.ml  parser.ml
source/tagless/demo-app/: demo_runner.ml  demo_tester.ml
source/tagless/loc/: locations.ml
source/tagless/strlang/: strlang.ml
