opam-version: "2.0"
maintainer: "Jan Rehders <jan@sheijk.net>"
authors: [ "Jan Rehders <jan@sheijk.net>" ]
description: "A simple ppx rewriter for string interpolation."
license: "MIT"
version: "0.1"
homepage: "https://github.com/sheijk/modular-lang-proto"
bug-reports: "https://github.com/sheijk/modular-lang-proto/issues"
dev-repo: "git+https://github.com/sheijk/modular-lang-proto.git"
build: ["dune" "build"]
test: ["dune" "test"]
install: ["dune" "install"]
remove: ["dune" "uninstall"]
depends: [
  "ocaml" {>= "4.10.0"}
  "ppx_deriving" {>= "4.4.1"}
  "merlin"
  "ocp-indent"
  "dune"
]
