
(library
 (name Calc_languages)
 (preprocess (pps ppx_deriving.show))
 (modules Calc_int Calc_float Calc_bool Calc)
 ; Don't put modules under Calc_languages module
 (wrapped false))

(executable
 (name calc_demo)
 (public_name calc-demo)
 (preprocess (pps ppx_deriving.show))
 (modules Calc_demo)
 (libraries Calc_languages))

(library
 (name Algo_languages)
 (preprocess (pps ppx_deriving.show))
 (modules Algo_int Algo)
 (libraries Calc_languages)
 ; Don't put modules under Algo_languages module
 (wrapped false))

(executable
 (name algo_demo)
 (public_name algo-demo)
 (preprocess (pps ppx_deriving.show))
 (modules Algo_demo)
 (libraries Calc_languages Algo_languages))

